force-app/main/default/objects/Deviation_Master__c/Deviation_Master__c.object-meta.xml
<CustomObject>
    <label>Deviation Master</label>
    <nameField>
        <displayFormat>DEV-{00000000}</displayFormat>
        <label>Deviations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviation Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>