force-app/main/default/objects/Deviation_Master__c/fields/Approving_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approving_Authority__c</fullName>
    <label>Approving Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCM</fullName>
            </value>
            <value>
                <fullName>ZCM</fullName>
            </value>
            <value>
                <fullName>NCM</fullName>
            </value>
            <value>
                <fullName>Credit Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>