force-app/main/default/objects/Deviation_Master__c/fields/Deviation__c.field-meta.xml
<CustomField>
    <fullName>Deviation__c</fullName>
    <label>Deviation</label>
    <type>TextArea</type>
</CustomField>