force-app/main/default/objects/Deviation_Master__c/fields/Product_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Product_Schemes__c</fullName>
    <label>Product Schemes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTU &amp; FTB</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Institutional Strategic</fullName>
            </value>
            <value>
                <fullName>Captive Retail</fullName>
            </value>
            <value>
                <fullName>Captive Strategic</fullName>
            </value>
            <value>
                <fullName>Banking Surrogate</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>GPR</fullName>
            </value>
            <value>
                <fullName>GPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>