force-app/main/default/objects/Deviation_Master__c/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transporter</fullName>
            </value>
            <value>
                <fullName>Bus Operator</fullName>
            </value>
            <value>
                <fullName>Captive</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Hirer</fullName>
            </value>
            <value>
                <fullName>Mine Owner</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>